# ASCEND

./: .gitignore  ARCHITECTURE.md  ARTIFACT_CONTRACT.md  CHANGELOG.md  CLI_SPEC.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  MATEK_OBSIDIAN_KNOWLEDGE_GRAPH_INSTRUCTIONS.md  PRODUCT_REQUIREMENTS.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SOURCES.md  TEST_PLAN.md  WORKFLOW_SPEC.md  ascend.example.toml  matek.example.toml  pyproject.toml  setup-instructions-for-agent.md
.github/workflows/: ci.yml
ascend-coding-handoff/ascend_coding_handoff/: .gitignore  AGENTS.md  ARTIFACT_CONTRACT.md  ASCEND_CODEX_DEFAULT_BACKEND_INSTRUCTIONS.md  CHANGELOG.md  CLI_SPEC.md  CODING_AGENT_TASK.md  DECISIONS.md  HANDOFF_MANIFEST.json  HANDOFF_PROMPT.txt  IMPLEMENTATION_PLAN.md  LICENSE_SUGGESTION.md  PRODUCT_REQUIREMENTS.md  PROJECT_TREE.txt  README.md  README_HANDOFF.md  RELEASE_CHECKLIST.md  SOURCES.md  TEST_PLAN.md  ascend.example.toml  pyproject.toml
ascend-coding-handoff/ascend_coding_handoff/.github/workflows/: ci.yml
ascend-coding-handoff/ascend_coding_handoff/examples/: problem.md
ascend-coding-handoff/ascend_coding_handoff/examples/reports/: partial.md  success.md
ascend-coding-handoff/ascend_coding_handoff/resources/prompts/: audit_domain.md  audit_foundational.md  audit_hostile.md  audit_sources.md  bibliography_verifier.md  candidate_packager.md  lean_feasibility.md  lean_statement_auditor.md  lean_statement_generator.md  manuscript_writer.md  research_prompt_framework.txt
ascend-coding-handoff/ascend_coding_handoff/resources/schemas/: audit_verdict.schema.json  final_report.schema.json  research_worker_report.schema.json
ascend-coding-handoff/ascend_coding_handoff/resources/templates/: challenge.lean  formalization.yaml
ascend-coding-handoff/ascend_coding_handoff/scripts/: verify_handoff.py
ascend-coding-handoff/ascend_coding_handoff/src/ascend_math_agent/: __init__.py  application.py  models.py  openai_client.py  redaction.py  reporting.py  reproduce.py  state.py
ascend-coding-handoff/ascend_coding_handoff/src/ascend_math_agent/execution/: docker.py
ascend-coding-handoff/ascend_coding_handoff/src/ascend_math_agent/stages/: compile_prompt.py
ascend-coding-handoff/ascend_coding_handoff/tests/: test_application_cli_e2e.py  test_backend_integration.py  test_foundation_utilities.py  test_initialization.py  test_reporting.py  test_run_lock.py  test_state.py  test_workflow_stages.py  test_workspace.py
examples/reports/: partial.md  rejected.md  success.md
resources/prompts/: audit_complexity.md  audit_domain.md  audit_foundational.md  audit_hostile.md  audit_sources.md  bibliography_verifier.md  candidate_packager.md  codex_formalizer.md  final_judge.md  lean_feasibility.md  manuscript_writer.md  prompt_compiler.md  report_writer.md  research_coordinator.md  research_worker.md
resources/schemas/: audit_verdict.schema.json  bibliography_audit.schema.json  claim_alignment.schema.json  compiled_problem.schema.json  final_report.schema.json  research_coordinator_decision.schema.json  research_round_plan.schema.json  research_worker_report.schema.json
scripts/: generate_model_schemas.py  verify_project.py
src/ascend_math_agent/: accounting.py  application.py  budget.py  cli.py  codex_model_backend.py  config.py  doctor.py  initialization.py  intake.py  logging.py  models.py  reporting.py  resources.py  verification.py  workspace.py
src/ascend_math_agent/execution/: base.py  native.py
src/ascend_math_agent/stages/: __init__.py  common.py  compile_prompt.py  lean.py  manuscript.py  research.py
src/matek_theorem_agent/: __init__.py  accounting.py  application.py  cli.py  codex_client.py  codex_model_backend.py  config.py  coordinator_context.py  doctor.py  failures.py  initialization.py  intake.py  logging.py  models.py  openai_client.py  redaction.py  reporting.py  reproduce.py  resources.py  schema_artifacts.py  source_provenance.py  state.py  verification.py  workspace.py
tests/: test_accounting.py  test_application_cli_e2e.py  test_backend_integration.py  test_codex_live.py  test_codex_model_backend.py  test_config.py  test_coordinator_context.py  test_doctor.py  test_execution_and_codex.py  test_foundation_utilities.py  test_initialization.py  test_intake.py  test_knowledge_graph.py  test_manuscript_ai_usage.py  test_openai_client.py  test_reporting.py  test_reproduce.py  test_run_lock.py  test_source_provenance.py  test_state.py  test_verification.py  test_workflow_stages.py  test_workspace.py
(+10 files in other folders)
