[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "matek-theorem-agent"
version = "0.3.0"
description = "MATEK: multi-agent theorem exploration through knowledge-graph memory"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "MATEK contributors"}]
keywords = ["mathematics", "research", "lean", "formal-verification", "openai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "openai>=2.20,<3",
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
  "rich>=13.7,<16",
  "tomli-w>=1.0,<2",
  "platformdirs>=4.2,<5",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8.2,<10",
  "pytest-asyncio>=0.23,<2",
  "mypy>=1.10,<3",
  "ruff>=0.5,<1",
]

[project.scripts]
matek = "matek_theorem_agent.cli:app"

[project.urls]
Homepage = "https://github.com/PhillipKerger/matek-theorem-agent"
Repository = "https://github.com/PhillipKerger/matek-theorem-agent.git"
Issues = "https://github.com/PhillipKerger/matek-theorem-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/matek_theorem_agent"]

[tool.hatch.build.targets.wheel.force-include]
"resources" = "matek_theorem_agent/resources"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/resources",
  "/scripts",
  "/examples",
  "/README.md",
  "/setup-instructions-for-agent.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/SECURITY.md",
  "/matek.example.toml",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "live: explicitly enabled tests that may use network, paid APIs, or local tools",
  "codex_live: opt-in authenticated Codex CLI tests that consume Codex allowance",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/matek_theorem_agent/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["matek_theorem_agent"]
mypy_path = "src"
warn_unreachable = true
